--- a/project.org
+++ b/project.org
@@ -317,12 +317,65 @@
      dev.setVisibleBacklightsOnAtPower(68);
      dev.setVisibleBacklightsOff();
      power = 100; % 100%
-     delay = 1000; % 1000ms
-     period = 100; % 100ms
-     on_duration = 50; % 50ms
-     count = 1000;
-     pwm_index = dev.addVisibleBacklightsPwm(power,delay,period,on_duration,count);
+     pulse_delay = 1000; % 1000ms
+     pulse_period = 100; % 100ms
+     pulse_on_duration = 50; % 50ms
+     pulse_count = 1000;
+     pwm_index = dev.addVisibleBacklightsPwm(power,pulse_delay,pulse_period,pulse_on_duration,pulse_count);
      dev.stopPwm(pwm_index);
+     dev.experimentDelay('setValue',10.0) % 10.0s
+     10
+     dev.removeAllExperimentSteps();
+     power = 90; % 90%
+     pulse_period = 100; % 100ms
+     pulse_on_duration = 50; % 50ms
+     pulse_count = 25;
+     sequence_off_duration = 2500; % 2500ms
+     sequence_count = 4;
+     step_duration = 30.0; % 30.0s
+     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_duration)
+     0
+     power = 70; % 70%
+     pulse_count = 35;
+     step_duration = 20.0; % 20.0s
+     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_duration)
+     1
+     experiment_steps = dev.getExperimentSteps();
+     experiment_steps{1}
+                    power: 90
+             pulse_period: 100
+        pulse_on_duration: 50
+              pulse_count: 25
+    sequence_off_duration: 2500
+           sequence_count: 4
+            step_duration: 30
+     experiment_steps{2}
+                    power: 70
+             pulse_period: 100
+        pulse_on_duration: 50
+              pulse_count: 35
+    sequence_off_duration: 2500
+           sequence_count: 4
+            step_duration: 20
+     dev.getExperimentStatus()
+                    state: 'EXPERIMENT_NOT_RUNNING'
+    experiment_step_index: 0
+    experiment_step_count: 2
+           sequence_index: 0
+           sequence_count: 0
+     dev.runExperiment()
+     dev.getExperimentStatus()
+                    state: 'DELAYING_BEFORE_STARTING_EXPERIMENT'
+    experiment_step_index: 0
+    experiment_step_count: 2
+           sequence_index: 0
+           sequence_count: 0
+     dev.getExperimentStatus()
+                    state: 'EXPERIMENT_RUNNING'
+    experiment_step_index: 0
+    experiment_step_count: 2
+           sequence_index: 2
+           sequence_count: 4
      dev.setIrBacklightsOff();
      dev.close();
      clear dev;
