Updated submodules and regenerated documentation.

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# Created 2018-11-01 Thu 17:20
+# Created 2018-11-01 Thu 17:34
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
@@ -542,17 +542,7 @@ Send gerbers zip file to your favorite PCB manufacturer for fabrication.
 
 **** PCB Parts
 
-| Item | Reference(s)                                                | Quantity | PartNumber     | Vendor            | Description                         |
-|------+-------------------------------------------------------------+----------+----------------+-------------------+-------------------------------------|
-|    1 | BL1 BL2 BL3 BL4                                             |        4 | MOBL_150x150   | smartvisionlights | Maximum Operating Backlight 150x150 |
-|    2 | CABLE1 CABLE2                                               |        2 | 1195-7211-ND   | digikey           | CABLE ASSY DB09 SHLD BEIGE 2M       |
-|    3 | CABLE10 CABLE11 CABLE13 CABLE14 CABLE4 CABLE5 CABLE7 CABLE8 |        8 | 277-8345-ND    | digikey           | CBL FMALE RA TO MALE 5POS 1.5M      |
-|    4 | CABLE12 CABLE3 CABLE6 CABLE9                                |        4 | GC14333-ND     | digikey           | USB3.0-A-USB3.0-MICRO-B 3M GOLD     |
-|    5 | CAMERA1 CAMERA2 CAMERA3 CAMERA4                             |        4 | FL3-U3-13Y3M-C | flir              | 1280x1024 150 FPS Mono              |
-|    6 | F1 F2 F3 F4 F5 F6 F7 F8                                     |        8 | 381-2367-ND    | digikey           | FAN AXIAL 40X10MM 24VDC WIRE        |
-|    7 | J1                                                          |        1 | 277-2667-ND    | digikey           | CONN DSUB PLUG 9POS STR TERM BLK    |
-|    8 | J2                                                          |        1 | 277-2668-ND    | digikey           | CONN DSUB RCPT 9POS STR TERM BLK    |
-|    9 | L1 L2 L3 L4                                                 |        4 | 475-2864-2-ND  | digikey           | EMITTER IR 860NM 100MA SMD          |
+|   |
 
 **** Supplemental Parts
 
@@ -597,7 +587,45 @@ Modular device fly bowl controller library.
 *** API NAMES
 
 #+BEGIN_SRC js
-
+  {
+    "id": "getApi",
+    "result": {
+      "firmware": [
+        "FlyBowlController"
+      ],
+      "verbosity": "NAMES",
+      "functions": [
+        "setIrBacklightsOnAtPower",
+        "setVisibleBacklightsOnAtPower",
+        "addVisibleBacklightsPwm",
+        "addExperimentStep",
+        "getExperimentSteps",
+        "getExperimentStatus"
+      ],
+      "parameters": [
+        "pulse_delay",
+        "pulse_period",
+        "pulse_on_duration",
+        "pulse_count",
+        "sequence_off_duration",
+        "sequence_count",
+        "step_duration"
+      ],
+      "properties": [
+        "flyBowlsEnabled",
+        "experimentDelay"
+      ],
+      "callbacks": [
+        "setIrBacklightsOn",
+        "setIrBacklightsOff",
+        "setVisibleBacklightsOn",
+        "setVisibleBacklightsOff",
+        "removeAllExperimentSteps",
+        "runExperiment",
+        "stopExperiment"
+      ]
+    }
+  }
 #+END_SRC
 
 *** API GENERAL
@@ -621,6 +649,8 @@ Modular device fly bowl controller library.
 [[https://github.com/janelia-modular-devices/modular_device_base]]
 
 [[https://github.com/janelia-modular-devices/backlight_controller]]
+
+[[https://github.com/janelia-modular-devices/fly_bowl_controller
 
 *** More Detailed Modular Device Information
 
