--- a/project.org
+++ b/project.org
@@ -17,13 +17,51 @@
 ** Arduino Serial Monitor
 
    #+BEGIN_SRC sh
-     getDeviceId
+     ?
      # {
-     #   "id": "getDeviceId",
+     #   "id": "?",
      #   "result": {
-     #     "name": "fly_bowl_controller",
-     #     "form_factor": "5x3",
-     #     "serial_number": 0
+     #     "device_id": {
+     #       "name": "fly_bowl_controller",
+     #       "form_factor": "5x3",
+     #       "serial_number": 0
+     #     },
+     #     "api": {
+     #       "firmware": [
+     #         "FlyBowlController"
+     #       ],
+     #       "verbosity": "NAMES",
+     #       "functions": [
+     #         "setIrBacklightsOnAtPower",
+     #         "setVisibleBacklightsOnAtPower",
+     #         "addVisibleBacklightsPwm",
+     #         "addExperimentStep",
+     #         "getExperimentSteps",
+     #         "getExperimentStatus"
+     #       ],
+     #       "parameters": [
+     #         "pulse_delay",
+     #         "pulse_period",
+     #         "pulse_on_duration",
+     #         "pulse_count",
+     #         "sequence_off_duration",
+     #         "sequence_count",
+     #         "step_delay",
+     #         "step_duration"
+     #       ],
+     #       "properties": [
+     #         "flyBowlsEnabled"
+     #       ],
+     #       "callbacks": [
+     #         "setIrBacklightsOn",
+     #         "setIrBacklightsOff",
+     #         "setVisibleBacklightsOn",
+     #         "setVisibleBacklightsOff",
+     #         "removeAllExperimentSteps",
+     #         "runExperiment",
+     #         "stopExperiment"
+     #       ]
+     #     }
      #   }
      # }
      setPropertiesToDefaults [ALL]
@@ -55,6 +93,106 @@
      # {
      #   "id": "setIrBacklightsOnAtPower",
      #   "result": null
+     # }
+     removeAllExperimentSteps
+     # {
+     #   "id": "removeAllExperimentSteps",
+     #   "result": null
+     # }
+     addExperimentStep ?
+     # {
+     #   "id": "addExperimentStep",
+     #   "result": {
+     #     "name": "addExperimentStep",
+     #     "firmware": "FlyBowlController",
+     #     "parameters": [
+     #       "power",
+     #       "pulse_period",
+     #       "pulse_on_duration",
+     #       "pulse_count",
+     #       "sequence_off_duration",
+     #       "sequence_count",
+     #       "step_delay",
+     #       "step_duration"
+     #     ],
+     #     "result_info": {
+     #       "type": "long"
+     #     }
+     #   }
+     # }
+     addExperimentStep 90 100 50 25 2500 4 4.0 30.0
+     # {
+     #   "id": "addExperimentStep",
+     #   "result": 0
+     # }
+     addExperimentStep 75 100 50 35 2500 4 0.0 20.0
+     # {
+     #   "id": "addExperimentStep",
+     #   "result": 1
+     # }
+     getExperimentSteps
+     # {
+     #   "id": "getExperimentSteps",
+     #   "result": [
+     #     {
+     #       "power": 90,
+     #       "pulse_period": 100,
+     #       "pulse_on_duration": 50,
+     #       "pulse_count": 25,
+     #       "sequence_off_duration": 2500,
+     #       "sequence_count": 4,
+     #       "step_delay": 4.000000,
+     #       "step_duration": 30.000000
+     #     },
+     #     {
+     #       "power": 75,
+     #       "pulse_period": 100,
+     #       "pulse_on_duration": 50,
+     #       "pulse_count": 35,
+     #       "sequence_off_duration": 2500,
+     #       "sequence_count": 4,
+     #       "step_delay": 0.000000,
+     #       "step_duration": 20.000000
+     #     }
+     #   ]
+     # }
+     getExperimentStatus
+     # {
+     #   "id": "getExperimentStatus",
+     #   "result": {
+     #     "state": "EXPERIMENT_NOT_RUNNING",
+     #     "experiment_step_index": 0,
+     #     "experiment_step_count": 2,
+     #     "sequence_index": 0,
+     #     "sequence_count": 0
+     #   }
+     # }
+     runExperiment
+     # {
+     #   "id": "runExperiment",
+     #   "result": null
+     # }
+     getExperimentStatus
+     # {
+     #   "id": "getExperimentStatus",
+     #   "result": {
+     #     "state": "EXPERIMENT_RUNNING",
+     #     "experiment_step_index": 0,
+     #     "experiment_step_count": 2,
+     #     "sequence_index": 2,
+     #     "sequence_count": 4
+     #   }
+     # }
+     getExperimentStatus
+     # {
+     #   "id": "getExperimentStatus",
+     #   "result": {
+     #     "state": "EXPERIMENT_NOT_RUNNING",
+     #     "experiment_step_index": 0,
+     #     "experiment_step_count": 2,
+     #     "sequence_index": 0,
+     #     "sequence_count": 0
+     #   }
      # }
      setVisibleBacklightsOnAtPower 68
      # {
@@ -94,108 +232,6 @@
      #   "id": "stopPwm",
      #   "result": null
      # }
-     experimentDelay setValue 10.0
-     # {
-     #   "id": "experimentDelay",
-     #   "result": 10.000000
-     # }
-     removeAllExperimentSteps
-     # {
-     #   "id": "removeAllExperimentSteps",
-     #   "result": null
-     # }
-     addExperimentStep ?
-     #   {
-     #     "id": "addExperimentStep",
-     #     "result": {
-     #       "name": "addExperimentStep",
-     #       "firmware": "FlyBowlController",
-     #       "parameters": [
-     #         "power",
-     #         "pulse_period",
-     #         "pulse_on_duration",
-     #         "pulse_count",
-     #         "sequence_off_duration",
-     #         "sequence_count",
-     #         "step_duration"
-     #       ],
-     #       "result_info": {
-     #         "type": "long"
-     #       }
-     #     }
-     #   }
-     addExperimentStep 90 100 50 25 2500 4 30.0
-     # {
-     #   "id": "addExperimentStep",
-     #   "result": 0
-     # }
-     addExperimentStep 75 100 50 35 2500 4 20.0
-     # {
-     #   "id": "addExperimentStep",
-     #   "result": 1
-     # }
-     getExperimentSteps
-     # {
-     #   "id": "getExperimentSteps",
-     #   "result": [
-     #     {
-     #       "power": 90,
-     #       "pulse_period": 100,
-     #       "pulse_on_duration": 50,
-     #       "pulse_count": 25,
-     #       "sequence_off_duration": 2500,
-     #       "sequence_count": 4,
-     #       "step_duration": 30.000000
-     #     },
-     #     {
-     #       "power": 75,
-     #       "pulse_period": 100,
-     #       "pulse_on_duration": 50,
-     #       "pulse_count": 35,
-     #       "sequence_off_duration": 2500,
-     #       "sequence_count": 4,
-     #       "step_duration": 20.000000
-     #     }
-     #   ]
-     # }
-     getExperimentStatus
-     # {
-     #   "id": "getExperimentStatus",
-     #   "result": {
-     #     "state": "EXPERIMENT_NOT_RUNNING",
-     #     "experiment_step_index": 0,
-     #     "experiment_step_count": 2,
-     #     "sequence_index": 0,
-     #     "sequence_count": 0
-     #   }
-     # }
-     runExperiment
-     # {
-     #   "id": "runExperiment",
-     #   "result": null
-     # }
-     getExperimentStatus
-     # {
-     #   "id": "getExperimentStatus",
-     #   "result": {
-     #     "state": "DELAYING_BEFORE_STARTING_EXPERIMENT",
-     #     "experiment_step_index": 0,
-     #     "experiment_step_count": 2,
-     #     "sequence_index": 0,
-     #     "sequence_count": 0
-     #   }
-     # }
-     getExperimentStatus
-     # {
-     #   "id": "getExperimentStatus",
-     #   "result": {
-     #     "state": "EXPERIMENT_RUNNING",
-     #     "experiment_step_index": 0,
-     #     "experiment_step_count": 2,
-     #     "sequence_index": 2,
-     #     "sequence_count": 4
-     #   }
-     # }
      setIrBacklightsOff
      # {
      #   "id": "setIrBacklightsOff",
@@ -215,6 +251,61 @@
      # [True, True, True, True]
      dev.fly_bowls_enabled('setValue',[True,False,True,False])
      # [True, False, True, False]
+     dev.remove_all_experiment_steps()
+     power = 90 # 90 percent
+     pulse_period = 100 # 100 ms
+     pulse_on_duration = 50 # 50 ms
+     pulse_count = 25
+     sequence_off_duration = 2500 # 2500 ms
+     sequence_count = 4
+     step_delay = 4.0 # 4.0 s
+     step_duration = 30.0 # 30.0 s
+     dev.add_experiment_step(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     # 0
+     power = 75 # 75 percent
+     pulse_count = 35
+     step_delay = 0.0 # 0.0 s
+     step_duration = 20.0 # 20.0 s
+     dev.add_experiment_step(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     # 1
+     dev.get_experiment_steps()
+     # [{'power': 90,
+     #   'pulse_period': 100,
+     #   'pulse_on_duration': 50,
+     #   'pulse_count': 25,
+     #   'sequence_off_duration': 2500,
+     #   'sequence_count': 4,
+     #   'step_delay': 4.0,
+     #   'step_duration': 30.0},
+     #  {'power': 75,
+     #   'pulse_period': 100,
+     #   'pulse_on_duration': 50,
+     #   'pulse_count': 35,
+     #   'sequence_off_duration': 2500,
+     #   'sequence_count': 4,
+     #   'step_delay': 0.0,
+     #   'step_duration': 20.0}]
+     dev.get_experiment_status()
+     # {'state': 'EXPERIMENT_NOT_RUNNING',
+     #  'experiment_step_index': 0,
+     #  'experiment_step_count': 2,
+     #  'sequence_index': 0,
+     #  'sequence_count': 0}
+     dev.run_experiment()
+     dev.get_experiment_status()
+     # {'state': 'EXPERIMENT_RUNNING',
+     #  'experiment_step_index': 0,
+     #  'experiment_step_count': 2,
+     #  'sequence_index': 3,
+     #  'sequence_count': 4}
+     #
+     # wait until experiment finishes or dev.stop_experiment()
+     dev.get_experiment_status()
+     # {'state': 'EXPERIMENT_NOT_RUNNING',
+     #  'experiment_step_index': 0,
+     #  'experiment_step_count': 2,
+     #  'sequence_index': 0,
+     #  'sequence_count': 0}
      dev.set_ir_backlights_on_at_power(90) # 90 percent. Automatically turns fans on too
      dev.set_visible_backlights_on_at_power(68) # 68 percent
      dev.set_visible_backlights_off()
@@ -234,57 +325,6 @@
      pulse_count = 1000
      pwm_index = dev.add_visible_backlights_pwm(power,pulse_delay,pulse_period,pulse_on_duration,pulse_count)
      dev.stop_pwm(pwm_index)
-     dev.experiment_delay('setValue',10.0) # 10.0 s
-     # 10.0
-     dev.remove_all_experiment_steps()
-     power = 90 # 90 percent
-     pulse_period = 100 # 100 ms
-     pulse_on_duration = 50 # 50 ms
-     pulse_count = 25
-     sequence_off_duration = 2500 # 2500 ms
-     sequence_count = 4
-     step_duration = 30.0 # 30.0 s
-     dev.add_experiment_step(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_duration)
-     # 0
-     power = 70 # 70 percent
-     pulse_count = 35
-     step_duration = 20.0 # 20.0 s
-     dev.add_experiment_step(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_duration)
-     # 1
-     dev.get_experiment_steps()
-     # [{'power': 90,
-     #   'pulse_period': 100,
-     #   'pulse_on_duration': 50,
-     #   'pulse_count': 25,
-     #   'sequence_off_duration': 2500,
-     #   'sequence_count': 4,
-     #   'step_duration': 30.0},
-     #  {'power': 70,
-     #   'pulse_period': 100,
-     #   'pulse_on_duration': 50,
-     #   'pulse_count': 35,
-     #   'sequence_off_duration': 2500,
-     #   'sequence_count': 4,
-     #   'step_duration': 20.0}]
-     dev.get_experiment_status()
-     # {'state': 'EXPERIMENT_NOT_RUNNING',
-     #  'experiment_step_index': 0,
-     #  'experiment_step_count': 2,
-     #  'sequence_index': 0,
-     #  'sequence_count': 0}
-     dev.run_experiment()
-     dev.get_experiment_status()
-     # {'state': 'DELAYING_BEFORE_STARTING_EXPERIMENT',
-     #  'experiment_step_index': 0,
-     #  'experiment_step_count': 2,
-     #  'sequence_index': 0,
-     #  'sequence_count': 0}
-     dev.get_experiment_status()
-     # {'state': 'EXPERIMENT_RUNNING',
-     #  'experiment_step_index': 0,
-     #  'experiment_step_count': 2,
-     #  'sequence_index': 3,
-     #  'sequence_count': 4}
      dev.set_ir_backlights_off() # Automatically turns fans off too
    #+END_SRC
 
@@ -314,6 +354,63 @@
      % [1]    [1]    [1]    [1]
      dev.flyBowlsEnabled('setValue',{true,false,true,false})
      % [1]    [0]    [1]    [0]
+     dev.removeAllExperimentSteps();
+     power = 90; % 90 percent
+     pulse_period = 100; % 100 ms
+     pulse_on_duration = 50; % 50 ms
+     pulse_count = 25;
+     sequence_off_duration = 2500; % 2500 ms
+     sequence_count = 4;
+     step_delay = 4.0; % 4.0 s
+     step_duration = 30.0; % 30.0 s
+     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     % 0
+     power = 75; % 75 percent
+     pulse_count = 35;
+     step_delay = 0.0; % 0.0 s
+     step_duration = 20.0; % 20.0 s
+     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     % 1
+     experiment_steps = dev.getExperimentSteps();
+     experiment_steps{1}
+     %                 power: 90
+     %          pulse_period: 100
+     %     pulse_on_duration: 50
+     %           pulse_count: 25
+     % sequence_off_duration: 2500
+     %        sequence_count: 4
+     %            step_delay: 4
+     %         step_duration: 30
+     experiment_steps{2}
+     %                 power: 70
+     %          pulse_period: 100
+     %     pulse_on_duration: 50
+     %           pulse_count: 35
+     % sequence_off_duration: 2500
+     %        sequence_count: 4
+     %            step_delay: 0
+     %         step_duration: 20
+     dev.getExperimentStatus()
+     %                 state: 'EXPERIMENT_NOT_RUNNING'
+     % experiment_step_index: 0
+     % experiment_step_count: 2
+     %        sequence_index: 0
+     %        sequence_count: 0
+     dev.runExperiment()
+     dev.getExperimentStatus()
+     %                 state: 'EXPERIMENT_RUNNING'
+     % experiment_step_index: 0
+     % experiment_step_count: 2
+     %        sequence_index: 2
+     %        sequence_count: 4
+     %
+     % wait until experiment finishes or dev.stopExperiment()
+     dev.getExperimentStatus()
+     %                 state: 'EXPERIMENT_NOT_RUNNING'
+     % experiment_step_index: 0
+     % experiment_step_count: 2
+     %        sequence_index: 0
+     %        sequence_count: 0
      dev.setIrBacklightsOnAtPower(90); % 90 percent. Automatically turns on fans too
      dev.setVisibleBacklightsOnAtPower(68); % 68 percent
      dev.setVisibleBacklightsOff();
@@ -324,58 +421,6 @@
      pulse_count = 1000;
      pwm_index = dev.addVisibleBacklightsPwm(power,pulse_delay,pulse_period,pulse_on_duration,pulse_count);
      dev.stopPwm(pwm_index);
-     dev.experimentDelay('setValue',10.0); % 10 s
-     dev.removeAllExperimentSteps();
-     power = 90; % 90 percent
-     pulse_period = 100; % 100 ms
-     pulse_on_duration = 50; % 50 ms
-     pulse_count = 25;
-     sequence_off_duration = 2500; % 2500 ms
-     sequence_count = 4;
-     step_duration = 30.0; % 30.0 s
-     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_duration)
-     % 0
-     power = 70; % 70 percent
-     pulse_count = 35;
-     step_duration = 20.0; % 20.0 s
-     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_duration)
-     % 1
-     experiment_steps = dev.getExperimentSteps();
-     experiment_steps{1}
-     %                 power: 90
-     %          pulse_period: 100
-     %     pulse_on_duration: 50
-     %           pulse_count: 25
-     % sequence_off_duration: 2500
-     %        sequence_count: 4
-     %         step_duration: 30
-     experiment_steps{2}
-     %                 power: 70
-     %          pulse_period: 100
-     %     pulse_on_duration: 50
-     %           pulse_count: 35
-     % sequence_off_duration: 2500
-     %        sequence_count: 4
-     %         step_duration: 20
-     dev.getExperimentStatus()
-     %                 state: 'EXPERIMENT_NOT_RUNNING'
-     % experiment_step_index: 0
-     % experiment_step_count: 2
-     %        sequence_index: 0
-     %        sequence_count: 0
-     dev.runExperiment()
-     dev.getExperimentStatus()
-     %                 state: 'DELAYING_BEFORE_STARTING_EXPERIMENT'
-     % experiment_step_index: 0
-     % experiment_step_count: 2
-     %        sequence_index: 0
-     %        sequence_count: 0
-     dev.getExperimentStatus()
-     %                 state: 'EXPERIMENT_RUNNING'
-     % experiment_step_index: 0
-     % experiment_step_count: 2
-     %        sequence_index: 2
-     %        sequence_count: 4
      dev.setIrBacklightsOff();
      dev.close();
      clear dev;
