--- a/project.org
+++ b/project.org
@@ -261,13 +261,27 @@
      sequence_count = 4
      step_delay = 4.0 # 4.0 s
      step_duration = 30.0 # 30.0 s
-     dev.add_experiment_step(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     dev.add_experiment_step(power,
+                             pulse_period,
+                             pulse_on_duration,
+                             pulse_count,
+                             sequence_off_duration,
+                             sequence_count,
+                             step_delay,
+                             step_duration)
      # 0
      power = 75 # 75 percent
      pulse_count = 35
      step_delay = 0.0 # 0.0 s
      step_duration = 20.0 # 20.0 s
-     dev.add_experiment_step(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     dev.add_experiment_step(power,
+                             pulse_period,
+                             pulse_on_duration,
+                             pulse_count,
+                             sequence_off_duration,
+                             sequence_count,
+                             step_delay,
+                             step_duration)
      # 1
      dev.get_experiment_steps()
      # [{'power': 90,
@@ -323,7 +337,11 @@
      pulse_period = 100 # 100 ms
      pulse_on_duration = 50 # 50 ms
      pulse_count = 1000
-     pwm_index = dev.add_visible_backlights_pwm(power,pulse_delay,pulse_period,pulse_on_duration,pulse_count)
+     pwm_index = dev.add_visible_backlights_pwm(power,
+                                                pulse_delay,
+                                                pulse_period,
+                                                pulse_on_duration,
+                                                pulse_count)
      dev.stop_pwm(pwm_index)
      dev.set_ir_backlights_off() # Automatically turns fans off too
    #+END_SRC
@@ -364,13 +382,27 @@
      sequence_count = 4;
      step_delay = 4.0; % 4.0 s
      step_duration = 30.0; % 30.0 s
-     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     dev.addExperimentStep(power, ...
+                           pulse_period, ...
+                           pulse_on_duration, ...
+                           pulse_count, ...
+                           sequence_off_duration, ...
+                           sequence_count, ...
+                           step_delay, ...
+                           step_duration)
      % 0
      power = 75; % 75 percent
      pulse_count = 35;
      step_delay = 0.0; % 0.0 s
      step_duration = 20.0; % 20.0 s
-     dev.addExperimentStep(power,pulse_period,pulse_on_duration,pulse_count,sequence_off_duration,sequence_count,step_delay,step_duration)
+     dev.addExperimentStep(power, ...
+                           pulse_period, ...
+                           pulse_on_duration, ...
+                           pulse_count, ...
+                           sequence_off_duration, ...
+                           sequence_count, ...
+                           step_delay, ...
+                           step_duration)
      % 1
      experiment_steps = dev.getExperimentSteps();
      experiment_steps{1}
@@ -419,7 +451,11 @@
      pulse_period = 100; % 100 ms
      pulse_on_duration = 50; % 50 ms
      pulse_count = 1000;
-     pwm_index = dev.addVisibleBacklightsPwm(power,pulse_delay,pulse_period,pulse_on_duration,pulse_count);
+     pwm_index = dev.addVisibleBacklightsPwm(power, ...
+                                             pulse_delay, ...
+                                             pulse_period, ...
+                                             pulse_on_duration, ...
+                                             pulse_count);
      dev.stopPwm(pwm_index);
      dev.setIrBacklightsOff();
      dev.close();
