--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# Created 2018-11-08 Thu 17:56
+# Created 2018-11-08 Thu 18:00
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
@@ -490,49 +490,49 @@ Blue waveform shows visible backlight indicator LED.
 
 step_duration = 6.0 s
 
-[[file::./images/waveform/step_duration.png]]
+[[file:./images/waveform/step_duration.png]]
 
 *** Step Delay
 
 step_delay = 1.0 s
 
-[[file::./images/waveform/step_delay.png]]
+[[file:./images/waveform/step_delay.png]]
 
 *** Sequence Count
 
 sequence_count = 4
 
-[[file::./images/waveform/sequence_count.png]]
+[[file:./images/waveform/sequence_count.png]]
 
 *** Sequence Off Duration
 
 sequence_off_duration = 750 ms
 
-[[file::./images/waveform/sequence_off_duration.png]]
+[[file:./images/waveform/sequence_off_duration.png]]
 
 *** Pulse Count
 
 pulse_count = 4
 
-[[file::./images/waveform/pulse_count.png]]
+[[file:./images/waveform/pulse_count.png]]
 
 *** Pulse On Duration
 
 pulse_on_duration = 50 ms
 
-[[file::./images/waveform/pulse_on_duration.png]]
+[[file:./images/waveform/pulse_on_duration.png]]
 
 *** Pulse Period
 
 pulse_period = 100 ms
 
-[[file::./images/waveform/pulse_period.png]]
+[[file:./images/waveform/pulse_period.png]]
 
 *** Power
 
 Power = 25%
 
-[[file::./images/waveform/power.png]]
+[[file:./images/waveform/power.png]]
 
 * Build Instructions
 
